feat: update poc