@@ -1,20 +1,16 @@
-/*
- * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH under
- * one or more contributor license agreements. See the NOTICE file distributed
- * with this work for additional information regarding copyright ownership.
- * Licensed under the Camunda License 1.0. You may not use this file
- * except in compliance with the Camunda License 1.0.
- */
 package io.camunda.service.transformers.filter;
 
 import static io.camunda.search.clients.query.SearchQueryBuilders.and;
 import static io.camunda.search.clients.query.SearchQueryBuilders.longTerms;
 import static io.camunda.search.clients.query.SearchQueryBuilders.stringTerms;
 import static io.camunda.search.clients.query.SearchQueryBuilders.term;
+import static io.camunda.search.clients.query.SearchQueryBuilders.wildcard;  // Add wildcard support for $like
+import static io.camunda.search.clients.query.SearchQueryBuilders.wildcardQuery;
 
 import io.camunda.search.clients.query.SearchQuery;
 import io.camunda.service.search.filter.ComparableValueFilter;
 import io.camunda.service.search.filter.UserTaskFilter;
+import io.camunda.service.query.FieldFilter;
 import io.camunda.service.transformers.ServiceTransformers;
 import io.camunda.service.transformers.filter.ComparableValueFilterTransformer.ComparableFieldFilter;
 import java.util.Arrays;
@@ -43,7 +39,7 @@ public class UserTaskFilterTransformer implements FilterTransformer<UserTaskFilt
     final var candidateGroupsQuery = getCandidateGroupsQuery(filter.candidateGroups());
 
     final var assigneesQuery = getAssigneesQuery(filter.assignees());
-    final var stateQuery = getStateQuery(filter.states());
+    final var stateQuery = getStateQuery(filter.states());  // Updated for $eq and $like
     final var tenantQuery = getTenantQuery(filter.tenantIds());
     final var priorityQuery = getComparableFilter(filter.priority(), "priority");
 
@@ -67,8 +63,8 @@ public class UserTaskFilterTransformer implements FilterTransformer<UserTaskFilt
 
   @Override
   public List<String> toIndices(final UserTaskFilter filter) {
-    if (filter != null && filter.states() != null && !filter.states().isEmpty()) {
-      if (Objects.equals(filter.states().getFirst(), "CREATED") && filter.states().size() == 1) {
+    if (filter != null && filter.states() != null && filter.states().getValue() != null && !filter.states().getValue().isEmpty()) {
+      if (Objects.equals(filter.states().getValue().get(0), "CREATED") && filter.states().getValue().size() == 1) {
         return Arrays.asList("tasklist-task-8.5.0_"); // Not necessary to visit alias in this case
       }
     }
@@ -111,20 +107,32 @@ public class UserTaskFilterTransformer implements FilterTransformer<UserTaskFilt
     return stringTerms("assignee", assignee);
   }
 
-  private SearchQuery getStateQuery(final List<String> state) {
-    return stringTerms("state", state);
+  // Updated to support both $eq and $like operators
+  private SearchQuery getStateQuery(final FieldFilter<List<String>> states) {
+    if (states != null && states.getValue() != null && !states.getValue().isEmpty()) {
+      final String operator = states.getOperator();
+      switch (operator) {
+        case "eq":  // Equals
+          return stringTerms("state", states.getValue());
+        case "like":  // Like (wildcard or pattern matching)
+          return wildcardQuery("state", states.getValue().get(0));  // Use wildcardQuery method
+        default:
+          throw new IllegalArgumentException("Unsupported operator: " + operator);
+      }
+    }
+    return null;
   }
 
-  private SearchQuery getTenantQuery(final List<String> tenant) {
-    return stringTerms("tenantId", tenant);
+  private SearchQuery getTenantQuery(final List<String> tenants) {
+    return stringTerms("tenantId", tenants);
   }
 
-  private SearchQuery getBpmnProcessIdQuery(final List<String> bpmnProcessId) {
-    return stringTerms("bpmnProcessId", bpmnProcessId);
+  private SearchQuery getBpmnProcessIdQuery(final List<String> bpmnProcessIds) {
+    return stringTerms("bpmnProcessId", bpmnProcessIds);
   }
 
-  private SearchQuery getElementIdQuery(final List<String> taskDefinitionId) {
-    return stringTerms("flowNodeBpmnId", taskDefinitionId);
+  private SearchQuery getElementIdQuery(final List<String> elementIds) {
+    return stringTerms("flowNodeBpmnId", elementIds);
   }
 
   private FilterTransformer<ComparableFieldFilter> getComparableFilterTransformer() {
